# src/routes/product.route.ts
@@ -2,11 +2,10 @@ import { Router } from "express";
 import {productController} from '../controllers';
 
 const productRouter = Router();
+productRouter.get('/category', productController.getProductByCategory);
+productRouter.get('/product_detail', productController.getProductDetailById);
 productRouter.get('/', productController.getProducts);
-productRouter.get('/:id', productController.getProductDetailById);
-productRouter.get('/category/:id', productController.getProductByCategory);
 
-// productRouter.get('/')
 
 // productRouter.delete('/:id', productController.deleteProduct);
 // productRouter.post('/', productController.createProduct);
